// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChevronButton renders IconButton with correct default styling 1`] = `
<IconButton
  basic={false}
  muted={false}
  pill={false}
>
  <Icon>
    <ChevronDownIcon
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </Icon>
</IconButton>
`;

exports[`ChevronButton rotates icon if prop is provided 1`] = `
<IconButton
  basic={false}
  muted={false}
  pill={false}
>
  <Icon
    rotated={true}
  >
    <ChevronDownIcon
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </Icon>
</IconButton>
`;
